src/main/java/org/example/lexer/error/ReachedEOFException.java
package org.example.lexer.error;

public class ReachedEOFException  extends Exception {
    public ReachedEOFException(String msg) {
        super(msg);
    }
}
